# kobo-highlights-extractor

./: .gitignore  .gitlab-ci.yml  .pypirc  .readthedocs.yaml  LICENSE  README.md  app.py  mkdocs.yml  pyproject.toml  setup.py  sonar-project.properties
docs/: index.md  requirements.txt
src/kobo_highlights_extractor/: extractor.py
