[build-system]
requires = ["setuptools==69.5"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]
name = "kobo-highlights-extractor"
authors = [{ name = "Toni Miquel Llull", email = "tonimiquel.llull@gmail.com" }]
description = "A package to extract highlights from kobo books"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["kobo", "ereader"]
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
]

[tool.poetry.dependencies]
jinja2 = "3.1.3"

[project.urls]
"Homepage" = "https://gitlab.com/tmllull/kobo-highlights-extractor"
"Bug Tracker" = "https://gitlab.com/tmllull/kobo-highlights-extractor/issues"
"Documentation" = "https://kobo-highlights-extractor.readthedocs.io"
